// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`normalizeCreatorSchema should attempt to normalize a schema, with JSON inputSchema 1`] = `
{
  "manifestSchema": {
    "additionalProperties": true,
    "type": "object",
  },
  "normalizedSchema": "[object Object], isZod=true",
  "tool": [
    "lorem ipsum",
    {
      "description": "lorem ipsum",
      "inputSchema": "[object Object], isZod=true",
    },
    [Function],
  ],
  "warnings": [],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with invalid JSON inputSchema 1`] = `
{
  "manifestSchema": {
    "additionalProperties": "busted",
    "type": "object",
  },
  "normalizedSchema": "[object Object], isZod=true",
  "tool": [
    "lorem ipsum",
    {
      "description": "lorem ipsum",
      "inputSchema": "[object Object], isZod=true",
    },
    [Function],
  ],
  "warnings": [],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with partial 1`] = `
{
  "manifestSchema": {
    "additionalProperties": true,
    "type": "object",
  },
  "normalizedSchema": "undefined, isZod=false",
  "tool": [
    "lorem ipsum",
    {
      "description": "lorem ipsum",
      "inputSchema": "undefined, isZod=false",
    },
    [Function],
  ],
  "warnings": [
    "Using permissive JSON Schema fallback. Failed to convert Zod to JSON Schema for lorem ipsum.",
    "Permissive JSON schemas may have unintended side-effects. Review lorem ipsum's inputSchema and ensure it's a valid JSON or Zod schema.",
  ],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with undefined name 1`] = `
{
  "manifestSchema": {
    "additionalProperties": true,
    "type": "object",
  },
  "normalizedSchema": "[object Object], isZod=true",
  "tool": [
    undefined,
    {
      "description": "lorem ipsum",
      "inputSchema": "[object Object], isZod=true",
    },
    [Function],
  ],
  "warnings": [],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with undefined name, schema 1`] = `
{
  "manifestSchema": {
    "additionalProperties": true,
    "type": "object",
  },
  "normalizedSchema": "undefined, isZod=false",
  "tool": [
    undefined,
    {
      "description": undefined,
      "inputSchema": "undefined, isZod=false",
    },
    [Function],
  ],
  "warnings": [
    "Using permissive JSON Schema fallback. Failed to convert Zod to JSON Schema for creator.",
    "Permissive JSON schemas may have unintended side-effects. Review creator's inputSchema and ensure it's a valid JSON or Zod schema.",
  ],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with undefined schema 1`] = `
{
  "manifestSchema": {
    "additionalProperties": true,
    "type": "object",
  },
  "normalizedSchema": "undefined, isZod=false",
  "tool": [
    "lorem ipsum",
    {
      "description": undefined,
      "inputSchema": "undefined, isZod=false",
    },
    [Function],
  ],
  "warnings": [
    "Using permissive JSON Schema fallback. Failed to convert Zod to JSON Schema for lorem ipsum.",
    "Permissive JSON schemas may have unintended side-effects. Review lorem ipsum's inputSchema and ensure it's a valid JSON or Zod schema.",
  ],
}
`;

exports[`normalizeCreatorSchema should attempt to normalize a schema, with valid zod inputSchema 1`] = `
{
  "manifestSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
  },
  "normalizedSchema": "[object Object], isZod=true",
  "tool": [
    "lorem ipsum",
    {
      "description": "lorem ipsum",
      "inputSchema": "[object Object], isZod=true",
    },
    [Function],
  ],
  "warnings": [],
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return a DOMException-like object, with name, message and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return a browser-like ErrorEvent-like object, with name, message and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return an error-like object, with message 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "message": "Handler error",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return an error-like object, with name and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return an error-like object, with name and single line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler attempting to return an error-like object, with single line stack 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "message": "Handler error",
    "stack": "Stack trace",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler returning AggregateError 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler returning error 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler returning null 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": null,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler returning promise 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "data": "async-result",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler returning undefined 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": undefined,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, handler throwing error 1`] = `
{
  "error": "Handler error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, mismatched state and request tool IDs 1`] = `
{
  "error": "Unknown toolId",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt tool invocation, successful handler 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "data": "result",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should timeout when handler takes too long 1`] = `
[
  [
    {
      "error": {
        "message": "Invoke timeout",
      },
      "id": "request-id",
      "ok": false,
      "t": "invoke:result",
    },
  ],
]
`;
